minor changes to content

--- a/_posts_org/2024-03-24-Welcome-to-my-website.org
+++ b/_posts_org/2024-03-24-Welcome-to-my-website.org
@@ -1,4 +1,4 @@
-#+TITLE: "Welcome to my website!"
+#+TITLE: Welcome to my website!
 #+DATE: 2025-10-13
 #+TAGS: miscellaneous, about me
 #+CATEGORIES: Blog
