--- a/_posts_org/2024-04-06-3D-printer-as-pcb-milling-machine.org
+++ b/_posts_org/2024-04-06-3D-printer-as-pcb-milling-machine.org
@@ -1,4 +1,4 @@
-#+TITLE: "3D Printer as a milling machine"
+#+TITLE: 3D Printer as a milling machine
 #+DATE: 2024-04-06
 #+CATEGORIES: Blog
 #+TAGS: miscellaneous
