--- a/_posts_org/2024-11-12-Award-for-Applied-Digitalisation.org
+++ b/_posts_org/2024-11-12-Award-for-Applied-Digitalisation.org
@@ -1,4 +1,4 @@
-#+TITLE: "Leipzig - Award for Applied Digitalisation"
+#+TITLE: Leipzig - Award for Applied Digitalisation
 #+DATE: 2024-11-12
 #+CATEGORIES: Blog
 #+TAGS: research
