--- a/_posts_org/2024-03-24-Welcome-to-my-website.org
+++ b/_posts_org/2024-03-24-Welcome-to-my-website.org
@@ -5,7 +5,7 @@
 
 (updated in january 2025)
 
-Hello everyone! I'm Eric Elbing, a mechanical engineer specializing in mechatronics. I earned my master’s degree from the [[https://fing.htwk-leipzig.de/startseite][University of Applied Sciences in Leipzig]] (Germany), where I'm still conducting extensive research on mobile robotics under the supervision of [[https://fing.htwk-leipzig.de/fakultaet/professuren/prof-martin-guertler/][Prof. Dr. rer. nat. Martin Gürtler]]. My research is supported by the EU and the state of Saxony through the [[https://european-social-fund-plus.ec.europa.eu/en][ESF Plus fund]].
+Hello everyone! I'm Eric Plaß (formerly Eric Elbing, you can read more about that [[https://ric.engineering/posts/Surname-Update/][here]]), a mechanical engineer specializing in mechatronics. I earned my master’s degree from the [[https://fing.htwk-leipzig.de/startseite][University of Applied Sciences in Leipzig]] (Germany), where I'm still conducting extensive research on mobile robotics under the supervision of [[https://fing.htwk-leipzig.de/fakultaet/professuren/prof-martin-guertler/][Prof. Dr. rer. nat. Martin Gürtler]] and [[https://www.uni-leipzig.de/personenprofil/mitarbeiter/andre-ludwig][Prof. Dr. André Ludwig]]. My research is supported by the EU and the state of Saxony through the [[https://european-social-fund-plus.ec.europa.eu/en][ESF Plus fund]].
 
 Beyond my research, I work as a mechanical engineer at [[https://www.zoema.de/][Zöschener Maschinen und Anlagenbau GmbH]].
 
