--- a/_posts_org/2024-04-06-3D-printer-as-pcb-milling-machine.org
+++ b/_posts_org/2024-04-06-3D-printer-as-pcb-milling-machine.org
@@ -1,6 +1,6 @@
 #+TITLE: 3D Printer as a milling machine
 #+DATE: 2024-04-06
-#+CATEGORIES: Blog
+#+CATEGORIES: Project
 #+TAGS: miscellaneous
 #+IMAGE_PATH: /assets/images/platine_printer.jpg
 #+IMAGE_ALT: Ender 3 Pro as milling machine
